crates/gx/tests/snapshots/parity__config_set_editor.config.json.snap
---
source: crates/gx/tests/parity.rs
expression: env.config_json()
---
{
  "projectDir": "/projects",
  "defaultHost": "github.com",
  "defaultOwner": "owner",
  "structure": "owner",
  "shallow": false,
  "similarityThreshold": 0.7,
  "editor": "code"
}
