crates/gx/tests/snapshots/parity__config_show.stdout.snap
---
source: crates/gx/tests/parity.rs
expression: run.stdout
---
{
  "projectDir": "/projects",
  "defaultHost": "github.com",
  "defaultOwner": "owner",
  "structure": "owner",
  "shallow": false,
  "similarityThreshold": 0.7,
  "editor": "nvim"
}
