crates/gx/tests/snapshots/parity__recent_limit_2.stdout.snap
---
source: crates/gx/tests/parity.rs
expression: run.stdout
---
delta-svc  /projects/owner/delta-svc  <RELATIVE>
beta       /projects/owner/beta  <RELATIVE>
