crates/gx/tests/snapshots/parity__recent_unlimited.stdout.snap
---
source: crates/gx/tests/parity.rs
expression: run.stdout
---
delta-svc  /projects/owner/delta-svc  <RELATIVE>
beta       /projects/owner/beta  <RELATIVE>
alpha      /projects/owner/alpha  <RELATIVE>
gamma      /projects/other/gamma  <RELATIVE>
