crates/gx/tests/snapshots/parity__resolve_fuzzy_auto.stderr.snap
---
source: crates/gx/tests/parity.rs
expression: run.stderr
---
Fuzzy match: 'alphaa' -> 'alpha' (97%)
