crates/gx/tests/snapshots/parity__shell_init_bash.stdout.snap
---
source: crates/gx/tests/parity.rs
expression: run.stdout
---
# gx — git project manager shell integration
# Add to ~/.bashrc: eval "$(gx shell-init)"

_GX_BIN="gx"

gx() {
    case "$1" in
        clone)
            local output
            output=$("$_GX_BIN" clone "${@:2}")
            if [ -n "$output" ] && [ -d "$output" ]; then
                cd "$output"
            fi
            ;;
        resume)
            local output status
            output=$("$_GX_BIN" resume "${@:2}")
            status=$?
            if [ "$status" -ne 0 ]; then
                return "$status"
            fi
            if [ -n "$output" ] && [ -d "$output" ]; then
                cd "$output"
            else
                return 1
            fi
            ;;
        ls|recent|rebuild|config|open|init|index|shell-init|--help|-h|--version|-v)
            "$_GX_BIN" "$@"
            ;;
        resolve)
            "$_GX_BIN" "$@"
            ;;
        "")
            "$_GX_BIN" --help
            ;;
        *)
            local target
            target=$("$_GX_BIN" resolve "$1")
            if [ -n "$target" ] && [ -d "$target" ]; then
                cd "$target"
            else
                return 1
            fi
            if [ "$2" = "wt" ]; then
                if ! command -v wt >/dev/null 2>&1; then
                    echo "gx: wt (worktrunk) not found on PATH" >&2
                    echo "Install: brew install worktrunk" >&2
                    return 1
                fi
                shift 2
                wt "$@"
            fi
            ;;
    esac
}

# Tab completion
_gx_completions() {
    local cur="${COMP_WORDS[COMP_CWORD]}"
    local prev="${COMP_WORDS[COMP_CWORD-1]}"

    if [ "$COMP_CWORD" -eq 1 ]; then
        local commands="clone ls recent resume rebuild config resolve open init index shell-init --help --version -h -v"
        local projects
        projects=$("$_GX_BIN" resolve --list 2>/dev/null)
        COMPREPLY=($(compgen -W "$commands $projects" -- "$cur"))
    elif [ "$COMP_CWORD" -eq 2 ]; then
        case "${COMP_WORDS[1]}" in
            clone|ls|recent|resume|rebuild|config|resolve|open|init|index|shell-init|--help|--version|-h|-v)
                if [ "${COMP_WORDS[1]}" = "config" ]; then
                    COMPREPLY=($(compgen -W "set" -- "$cur"))
                fi
                ;;
            *)
                COMPREPLY=($(compgen -W "wt" -- "$cur"))
                ;;
        esac
    elif [ "$COMP_CWORD" -eq 3 ] && [ "${COMP_WORDS[1]}" = "config" ] && [ "$prev" = "set" ]; then
        COMPREPLY=($(compgen -W "projectDir defaultHost structure shallow similarityThreshold editor" -- "$cur"))
    fi
}
complete -F _gx_completions gx
