crates/gx/tests/snapshots/parity__shell_init_fish.stdout.snap
---
source: crates/gx/tests/parity.rs
expression: run.stdout
---
# gx — git project manager shell integration
# Add to ~/.config/fish/conf.d/gx.fish: gx shell-init | source

set -g _GX_BIN "gx"

function gx
    switch $argv[1]
        case clone
            set -l output ($_GX_BIN clone $argv[2..])
            if test -n "$output" -a -d "$output"
                cd "$output"
            end
        case resume
            set -l output ($_GX_BIN resume $argv[2..])
            set -l cmd_status $status
            if test $cmd_status -ne 0
                return $cmd_status
            end
            if test -n "$output" -a -d "$output"
                cd "$output"
            else
                return 1
            end
        case ls recent rebuild config open init index shell-init --help -h --version -v resolve
            $_GX_BIN $argv
        case ''
            $_GX_BIN --help
        case '*'
            set -l target ($_GX_BIN resolve $argv[1])
            if test -n "$target" -a -d "$target"
                cd "$target"
            else
                return 1
            end
            if test "$argv[2]" = "wt"
                if not command -v wt >/dev/null 2>&1
                    echo "gx: wt (worktrunk) not found on PATH" >&2
                    echo "Install: brew install worktrunk" >&2
                    return 1
                end
                wt $argv[3..]
            end
    end
end

# Tab completion
complete -c gx -f
complete -c gx -n "__fish_use_subcommand" -a "clone ls recent resume rebuild config resolve open init index shell-init --help --version -h -v"
complete -c gx -n "__fish_use_subcommand" -a "($_GX_BIN resolve --list 2>/dev/null)"
complete -c gx -n "__fish_seen_subcommand_from config" -a "set"
complete -c gx -n "__fish_seen_subcommand_from config; and __fish_seen_subcommand_from set" -a "projectDir defaultHost structure shallow similarityThreshold editor"
complete -c gx -n "not __fish_seen_subcommand_from clone ls recent resume rebuild config resolve open init index shell-init --help -h --version -v; and test (count (commandline -opc)) -eq 2" -a "wt"
